fixing the globe pic

--- a/internetpage.html
+++ b/internetpage.html
@@ -9,7 +9,7 @@
   <body>
     <div id="wrapper">
       <div id="header">
-        <img src="images/globe.png" alt="globepicture" />
+        <img src="images/globe.png" class="globe" alt="globepicture" />
 
         <h1>The Inter<span>net</span></h1>
         <h2>The world wide web</h2>
@@ -29,7 +29,7 @@
         <div id="ads">
           <p>Reinvent your career in just 14 weeks</p>
           <img src="images/ninja.png" alt="ninjapic" />
-          <input type="button" value="Learn more >>>">
+          <input type="button" value="Learn more &#187&#187&#187 ">
         </div>
       </div>
 
@@ -109,7 +109,7 @@
             eius magnam aperiam quia obcaecati dolores facere quis sapiente
             omnis doloribus.
             </p>    
-            learn more about the Big-3 <a href="">here!</a>
+            learn more about the Big-3 <a  href="">here!</a>
 
             
           </div>
